# Posydon_HR_Graphing_Script

./: .gitignore  GraphingTester.ipynb  HRDiagram.py  POSYDONHRDiagram.py  POSYDONHRDiagramModule.py  SamplerGenerator.ipynb  Use_Example.ipynb  index.html  pyproject.toml  readme.md  readme.txt  todo.txt
ExampleGraphs/Contacts/graphs/: S1_mass_dynmR.html  S2_mass.html  S2_surface_he4.html  eccentricity.html  eccentricity_dynmR.html
ExampleGraphs/HMXBs/graphs/: S2_mass.html  S2_surface_he4.html  eccentricity.html  lg_mtransfer_rate.html  lg_mtransfer_rate_dynmR.html  orbital_period_dynmR.html
ExampleGraphs/LMXBs/graphs/: S2_mass.html  S2_mass_dynmR.html  S2_surface_h1.html  eccentricity.html  lg_mtransfer_rate.html  lg_mtransfer_rate_dynmR.html
ExampleGraphs/UCXBs/graphs/: S1_mass.html  S2_mass_dynmR.html  S2_surface_h1_dynmR.html  (+5 more)
Posydon_HR_Graphing_Script/: pyproject.toml
Sampler/Contacts/: viewer.html
Sampler/XBs/: viewer.html
code/: Contact_Binaries_S2_surface_h1_linear_dynR.html  Full_viewer.html  HRDiagram.py  Master-Grapher.ipynb  Use_Example.ipynb  _X-ray_Binaries_lg_mtransfer_rate_log10_R5.html  default_Star_One_Mass_linear_radius_5.html  default_Star_One_Mass_linear_star_radius.html
graphs/: Contact_Binaries_S1_mass_linear_dynR.html  Contact_Binaries_S1_surface_h1_linear_dynR.html  Contact_Binaries_S2_surface_h1_linear_dynR.html  DB_S1_mass_linear_dynR.html  DB_orbital_period_log10_dynR.html  X-ray_Binaries_orbital_period_log10_dynR.html
graphs/SampleGen/: Viewer.html
posydon_hr_diagram.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+192 files in other folders)
